wk3 fixes - horizontal scrolling wayfinding

--- a/chamber/styles/base-large.css
+++ b/chamber/styles/base-large.css
@@ -60,6 +60,10 @@
     column-gap: 10px;
 
 }
+#cards.listView section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+}
 
 }
 
